changes done by sanjay

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -343,6 +343,9 @@
                     <li>
                         <a href="https://apps.apple.com/us/app/bellymelly-restaurant-partner/id1481353155">Download Restaurant Partner iOS App</a>
                     </li>
+                    <li>
+                        <a href="https://bellymelly.com/join-now.html">Add Restaurant Detail</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-lg-3">
