--- a/src/app/restaurent/pages/login/login.component.html
+++ b/src/app/restaurent/pages/login/login.component.html
@@ -20,11 +20,11 @@
               Sign In
             </h6>
           </div>
-          <div class="row mb-2">
-            <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6 text-center mb-2">
               <a href="javascript:void(0)" (click)="socialFbSignIn(1)"><img  src="assets/img/fb.svg" class="img-fluid"></a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 text-center mb-2">
               <a href="javascript:void(0)" (click)="socialGoogleSignIn(2)"><img  src="assets/img/google.svg" class="img-fluid"></a>  
             </div>
           </div>
