--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -70,7 +70,7 @@
 					<div class="row w-100 d-flex align-items-center no-gutters mb-3">
 						<div class="col-4"></div>
 						<div class="col-4"><div class="text-center h6 text-white mb-0">Track Order</div></div>
-						<div class="col-4 text-right"><a [routerLink]="'/' + country + '/' + mobUrl" data-dismiss="modal"><img  src="assets/images/cross.svg"></a></div>
+						<div class="col-4 text-right"><a [routerLink]="  '/' + mobUrl" data-dismiss="modal"><img  src="assets/images/cross.svg"></a></div>
 					</div>
 					<div class="row w-100 d-flex align-items-center justify-content-between no-gutters text-center">
 						
